# image-processing-exercises

./: README.md
boofcv-exercises/: pom.xml
boofcv-exercises/src/main/java/com/boofcv/exercises/: SimpleExample01.java
boofcv-exercises/src/test/java/com/boofcv/exercises/: SimpleExercises01Test.java
exercises/Exercises_02ab/: cam_74.pgm
exercises/Exercises_03ab/: immed_gray_inv_20051123_dil1.pgm  immed_gray_inv_20051123_ero1.pgm
exercises/Exercises_04ab/: immed_gray_inv_20051123_clo1.pgm
exercises/Exercises_06ab/: immed_gray_inv_20051123_ope2clo2.pgm
exercises/Exercises_11a/Var/: Notes__flat_zone_ex_4x4.txt
opencv-exercises/: README.md
opencv-exercises/exercises/: CMakeLists.txt  exercise2a.cpp  exercise2b.cpp  exercise2d_inf.cpp  exercise2d_sup.cpp  exercise3a_erosion.cpp  exercise3b_dilation.cpp  exercise_02a_thresh.cpp  exercise_02b_compare.cpp  exercise_02d_inf.cpp  exercise_02d_sup.cpp  exercise_03a_erosion.cpp  exercise_03b_dilation.cpp  exercise_04a_opening.cpp  exercise_04b_closing.cpp  exercise_06b_opening_closing.cpp
opencv-exercises/exercises-0x/: CMakeLists.txt  exercise_02b_compare.cpp  exercise_02c.tex  exercise_02d_sup.cpp  exercise_03a_erosion.cpp  exercise_04a_opening.cpp  exercise_06a_closing_opening.cpp  exercise_09a.tex
opencv-exercises/exercises-0x/data/ex2/: cam_74_threshold100.pgm
opencv-exercises/exercises-0x/data/ex3/: immed_gray_inv.pgm  immed_gray_inv_20051123_dil2.pgm  immed_gray_inv_20051123_ero2.pgm
opencv-exercises/exercises-0x/data/ex4/: immed_gray_inv_20051123_ope1.pgm  immed_gray_inv_20051123_ope2.pgm
opencv-exercises/exercises-0x/data/ex6/: immed_gray_inv_20051123_clo2ope2.pgm  immed_gray_inv_20051123_clo4ope4.pgm
opencv-exercises/exercises-0x/libraries/ImageUtilities/: image_utilities.cpp
opencv-exercises/exercises-1x/: CMakeLists.txt  README.md  exercise_11.cpp  exercise_11a_flatzone.cpp  exercise_12.cpp  exercise_13a_minimum.cpp  exercise_13b_maximum.cpp  recursive-approach-pseudocode.txt
opencv-exercises/exercises-1x/data/: gran01_64.pgm  gran01_64_flatzone0_0.pgm  immed_gray_inv_20051218_frgr4.pgm  immed_gray_inv_20051218_frgr4_flatzone57_36.pgm
opencv-exercises/exercises-segmentation/: CMakeLists.txt  exercise-01e_rainfallwatershed.ipynb  exercise_01a_boundary.cpp  exercise_01b_grassfire.cpp  exercise_01c_wheel.cpp  exercise_01d_watershed.cpp
opencv-exercises/exercises-segmentation/data/: input-01e.pgm
opencv-exercises/exercises/data/ex4/: immed_gray_inv_20051123_clo2.pgm
opencv-exercises/exercises/data/ex6/: immed_gray_inv_20051123_ope4clo4.pgm
opencv-exercises/exercises/data/ex8/: isn_256.pgm
opencv-exercises/exercises/libraries/ImageUtilities/: CMakeLists.txt  image_utilities.cpp  image_utilities.hpp
opencv-exercises/setup/: CMakeLists.txt
