cmake_minimum_required(VERSION 2.8)

project(exercises)

find_package(OpenCV REQUIRED)

add_executable(exercise_02a_thresh exercise_02a_thresh.cpp)
add_executable(exercise_02b_compare exercise_02b_compare.cpp)
add_executable(exercise_02d_sup exercise_02d_sup.cpp)
add_executable(exercise_02d_inf exercise_02d_inf.cpp)
add_executable(exercise_03a_erosion exercise_03a_erosion.cpp)
add_executable(exercise_03b_dilation exercise_03b_dilation.cpp)
add_executable(exercise_04a_opening exercise_04a_opening.cpp)
add_executable(exercise_04b_closing exercise_04b_closing.cpp)
add_executable(exercise_06a_closing_opening exercise_06a_closing_opening.cpp)
add_executable(exercise_06b_opening_closing exercise_06b_opening_closing.cpp)

add_subdirectory(libraries/ImageUtilities)

target_link_libraries(exercise_02a_thresh ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_02b_compare ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_02d_sup ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_02d_inf ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_03a_erosion ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_03b_dilation ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_04a_opening ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_04b_closing ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_06a_closing_opening ${OpenCV_LIBS} ImageUtilities)
target_link_libraries(exercise_06b_opening_closing ${OpenCV_LIBS} ImageUtilities)